Moved to vislcg3 repository

--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+This is now in the official vislcg3 repository! See
+http://beta.visl.sdu.dk/cg3.html
+
+
 cg.el -- a major mode for editing Constraint Grammar files
 
 See http://beta.visl.sdu.dk/constraint_grammar.html for what
